@@ -26,7 +26,7 @@
     <string id="21013">Scheduled recording successful</string>
     <string id="21014">Attemping to playback live T</string>
     <string id="21015">Unable to playback live TV</string>
-    <string id="21016">Delete Show</string>
+    <string id="21016">Delete</string>
     <string id="21017">Cancel Recording</string>
     <string id="21018">Remove Favorite</string>
     <string id="21019">Record</string>
@@ -36,4 +36,7 @@
     <string id="21023">Clear Watched</string>
     <string id="21024">Set Archived</string>
     <string id="21025">Clear Archived</string>
+    <string id="21026">Delete &amp; Set Watched</string>
+    <string id="21027">Delete &amp; Clear Watched</string>
+    <string id="21028">Delete &amp; Set Don't Like</string>
 </strings>
