@@ -1,3 +1,6 @@
+[B]Version 1.2.10 (Oct 8, 2012)[/B]
+- Added "Delete/Set Watched", "Delete/Clear Watched", and "Delete/Don't Like" context menu items
+
 [B]Version 1.2.9 (Oct 8, 2012)[/B]
 - Added "Archive" context menu item
 
